//Run here: https://dbdiagram.io/d
Table auth_user {
  id integer [primary key]
  username varchar
  first_name varchar
  last_name varchar
  email varchar
  password varchar
  last_login timestamp
  is_superuser boolean
  is_staff boolean
  is_active boolean
  date_joined timestamp
}

Table inventory {
  id integer [primary key]
  name varchar
  date date
  user auth_user
}

Table inventory_item {
  id integer [primary key]
  inventory inventory
  department integer 
  asset_group integer 
  category varchar
  inventory_number varchar
  asset_component bigint 
  sub_number integer
  acquisition_date date
  asset_description varchar
  quantity integer
  initial_value decimal(10, 2) 
  lastInventoryRoom varchar
  currentRoom varchar 
}

Ref: inventory.user > auth_user.id // Many-to-one relationship
Ref: inventory_item.inventory > inventory.id // Many-to-one relationship
